--- a/JuegoGato/app/src/main/res/layout/activity_main2.xml
+++ b/JuegoGato/app/src/main/res/layout/activity_main2.xml
@@ -170,7 +170,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/txtPlayerOne"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
@@ -182,7 +182,7 @@
         app:layout_constraintVertical_bias="0.15" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/txtPlayerTwo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/white"
