--- a/JuegoGato/app/src/main/res/layout/activity_main2.xml
+++ b/JuegoGato/app/src/main/res/layout/activity_main2.xml
@@ -14,6 +14,7 @@
         android:layout_marginTop="16dp"
         android:background="@android:drawable/ic_menu_revert"
         android:backgroundTint="@color/teal_200"
+        android:onClick="onClickBack"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.097"
         app:layout_constraintStart_toStartOf="parent"
@@ -199,6 +200,7 @@
         android:layout_height="53dp"
         android:background="@android:drawable/ic_popup_sync"
         android:backgroundTint="@color/pink"
+        android:onClick="onClickReset"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.891"
