--- a/JuegoGato/app/src/main/res/layout/activity_main2.xml
+++ b/JuegoGato/app/src/main/res/layout/activity_main2.xml
@@ -204,7 +204,7 @@
         app:layout_constraintVertical_bias="0.15" />
 
     <Button
-        android:id="@+id/button18"
+        android:id="@+id/btnReset"
         android:layout_width="53dp"
         android:layout_height="53dp"
         android:background="@android:drawable/ic_popup_sync"
@@ -219,14 +219,14 @@
 
     <TextView
         android:id="@+id/txtWinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="234dp"
+        android:layout_height="42dp"
         android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.24" />
+        app:layout_constraintVertical_bias="0.234" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
