--- a/JuegoGato/app/src/main/res/layout/activity_main.xml
+++ b/JuegoGato/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/michi1"
+    android:background="@drawable/gatochido"
     tools:context=".MainActivity">
 
     <Button
@@ -30,7 +30,7 @@
         android:layout_marginTop="24dp"
         android:layout_marginEnd="84dp"
         android:text="@string/bienvenido"
-        android:textColor="@color/pink"
+        android:textColor="@color/white"
         android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/textView4"
@@ -55,7 +55,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="456dp"
-        android:text="@string/lineas"
         android:textColor="@color/pink"
         android:textSize="48sp"
         app:layout_constraintEnd_toEndOf="parent"
